<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="facebook_app_id" translatable="false">451426460301235</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb451426460301235</string>
    <string name="facebook_client_token" translatable="false">61031c5e5776f926031776faac997f9a</string>
    <string name="onilne_shopping_app">Online Shopping App</string>
    <string name="alert_title">Title</string>
    <string name="ok_text">OK</string>
    <string name="cancel">Cancel</string>
    <string name="Latter">Later</string>
    <string name="unauthorized_access">Your last login session is expired, please login again.</string>
    <string name="request_time_out">Request Time Out</string>
    <string name="something_wrong_try_again">Something went wrong! please try again.</string>
    <string name="something_wrong">Something went wrong! please check your internet connection &amp; try again.</string>
    <string name="please_check_internet_connection">Please check internet connection</string>
    <string name="please_update_this_app">Please update this application from playstore.</string>
    <string name="out_of_stock_product">Out of Stock</string>
    <string name="error_in_fetching_data">Error in fetching data</string>
    <string name="coins_applied">Coins applied.</string>
    <string name="coins_not_applied">Coins not applied.</string>
    <string name="update_app">Update App</string>
    <string name="retry">Retry</string>
    <string name="ok">OK</string>
    <string name="update">Update</string>
    <string name="rupees">₹</string>
    <string name="disount">% off</string>
    <string name="disount_items">Discount</string>
    <string name="coupen_ammount">Coupen Ammount</string>
    <string name="new_total_ammount">New Total Ammount</string>
    <string name="english" translatable="false">English</string>
    <string name="hindi" translatable="false">हिंदी</string>
    <string name="gujarati" translatable="false">ગુજરાતી</string>
    <string name="marathi" translatable="false">मराठी</string>
    <string name="telugu" translatable="false">తెలుగు (Telugu)</string>
    <string name="tamil" translatable="false">தமிழ் (Tamil)</string>
    <string name="punjabi" translatable="false">ਪੰਜਾਬੀ (Punjabi)</string>
    <string name="kannada" translatable="false">ಕನ್ನಡ (Kannada)</string>
    <string name="Malayalam" translatable="false">മലയാളം (Malayalam)</string>
    <string name="oops_no_internet_connection" translatable="false">Oops, No internet connection!</string>
    <string name="make_sure_wifi_or_cellular_data_is_turned_on_and_that_retry" translatable="false">Make sure wifi or cellular data is turned on and that retry!</string>
    <string name="please_enter_full_name">Please enter full name</string>
    <string name="please_enter_email">Please enter email address.</string>
    <string name="enter_correct_email">Please enter a valid email address.</string>
    <string name="please_enter_mobile_number">Please enter mobile number.</string>
    <string name="mobile_number_length">Mobile number should be 10 digit.</string>
    <string name="please_select_gender">Please select gender.</string>
    <string name="please_enter_spoken_language">Please enter Spoken Language.</string>
    <string name="please_select_occupation">Please select Occupation.</string>
    <string name="please_enter_about_you">Please enter About You.</string>
    <string name="please_enter_address">Please enter Address.</string>
    <string name="please_enter_house_no">Please enter House No., Building Name.</string>
    <string name="please_enter_road_name">Please enter Road Name, Area, Colony.</string>
    <string name="please_enter_address_type">Please select Address Type.</string>
    <string name="please_enter_pincode">Please enter Pincode.</string>
    <string name="please_enter_valid_pincode">Please enter valid pincode.</string>
    <string name="please_enter_city">Please enter City.</string>
    <string name="please_select_state">Please select State.</string>
    <string name="please_select_payment_mode">Please select payment mode.</string>
    <string name="please_enter_message">Please enter Message.</string>
    <string name="please_choose_topic">Please Choose Topics.</string>
    <string name="select_image">Select Image</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="choose_image_from">Choose Photo From</string>
    <string name="cancel_image_capture">User cancelled image capture</string>
    <string name="fail_image_capture">Sorry! Failed to capture image</string>
    <string name="image_length">Image should not be grater than 5 Mb</string>
    <string name="toast_cannot_retrieve_selected_image">Cannot retrieve selected image</string>
    <string name="toast_cannot_retrieve_cropped_image">Cannot retrieve cropped image</string>
    <string name="on_location_instruction">Please go to app settings and enable permissions</string>
    <string name="dialog_alert_heading">Alert</string>
    <string name="validation_internet_connection">Please check internet connection</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="error">Error</string>
    <string name="try_again">Try again</string>
    <string name="alert_txt">Alert</string>
    <string name="allow_permission_setting">Go to Settings and Grant the permission to use feature inside the application.</string>
    <string name="allow_permission">Please allow permission</string>
    <string name="want_to_exit">Are you sure you want to exit?</string>
    <string name="enable_location">Enable Location</string>
    <string name="loading">Loading…</string>
    <string name="validation_internet_try_again">Please check your internet connection \nand try again</string>
    <string name="choose_items_online">Choose Items Online</string>
    <string name="payment_online">Payment Online</string>
    <string name="welcome_to_uoons">Welcome to Uoons</string>
    <string name="get_started">GET STARTED</string>
    <string name="online_item_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry</string>
    <string name="onBoarding_screen_one">An Indian platform with a wide range of products &amp; brands, now choose your favourite electronics gadgets and give a chance to serve you. We believe in Real deals &amp; True review</string>
    <string name="onBoarding_screen_second">Multiple payment options available like COD, Debit &amp; Credit Card, EMI, Net Banking, UPI, Wallet, Pay Later etc.</string>
    <string name="select_language">Select Language</string>
    <string name="select">Select</string>
    <string name="home">HOME</string>
    <string name="category">CATEGORY</string>
    <string name="order">ORDER</string>
    <string name="account">ACCOUNT</string>
    <string name="varsionName">VersionName:</string>
    <string name="enter_mobile_no">Please enter mobile no.</string>
    <string name="enter_valid_mobile_no">Please enter valid mobile no.</string>
    <string name="enter_otp">Please enter otp.</string>
    <string name="enter_valid_otp">Please enter 4 number otp.</string>
    <string name="Sign_up_to_check_your_order_details">Sign Up to check your order details</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="by_continuing_you_agree_to_uoons">By continuing, you agree to Uoons</string>
    <string name="terms_and_conditions">Terms &amp; Conditions<font color="#FF000000"> And</font> Privacy Policy</string>
    <string name="verify_account">Verify Account</string>
    <string name="Mobile_verification_has_successfully_done">Mobile Verification has successfully done</string>
    <string name="to_complete_your_registration_we_have_sent_an_otp_to_verify">To complete your registration, we have sent an OTP to verify</string>
    <string name="verify">VERIFY</string>
    <string name="if_you_didn_receive_your_code_resend">If you didn’t receive your code ?<font color="#F05936"> Resend</font></string>
    <string name="if_you_didn_receive_your_code">If you didn’t receive your code ?</string>
    <string name="resend">Resend</string>
    <string name="Search_your_items">Search your items</string>
    <string name="view_all">View all</string>
    <string name="best_seller">Best Seller</string>
    <string name="search_questions">Have a question? Search for answers</string>
    <string name="didnot_get_answer">Didn’t get the right answer you are looking for</string>
    <string name="post_your_question">POST YOUR QUESTION</string>
    <string name="Write_question">Write Question</string>
    <string name="type_your_question">Type Your Question..</string>
    <string name="no_data_found">No Data Found !</string>
    <string name="sponsored" translatable="false">Sponsored</string>
    <string name="search_innovation" translatable="false">Search innovations...</string>
    <string name="are_you_part_of" translatable="false">Are you the part of Start up India ?</string>
    <string name="are_you_sure" translatable="false">Are you sure to submit the details. All the details will be used to show on the app.</string>
    <string name="sign_up">Sign Up</string>
    <string name="call_us_at">Call us at</string>
    <string name="my_bank_details">My Bank Details</string>
    <string name="they_will_be_used_for_all_refunds">Please enter your correct bank details carefully. They will be used for all refunds, margins, and bonus payments.</string>
    <string name="my_payments">My Payments</string>
    <string name="refer_and_earn">Refer &amp; Earn</string>
    <string name="my_coins">My Coins</string>
    <string name="my_referral_code">My Referral Code</string>
    <string name="referral_by_friend">Referral by a friend ?</string>
    <string name="enter_referral_code">Enter referral code</string>
    <string name="Please_enter_the_exact_code_in_the_space_below">Please enter the exact code in the space below.</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="security" tools:ignore="MissingTranslation">Security</string>
    <string name="rate_us">Rate us</string>
    <string name="legal_and_policies">Legal and Policies</string>
    <string name="profile">PROFILE</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="add_profile">ADD PROFILE</string>
    <string name="add_picture">ADD PICTURE</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="languages_spoken">Languages Spoken</string>
    <string name="occupation">Occupation</string>
    <string name="about_me">About Me</string>
    <string name="landmark">Landmark</string>
    <string name="pin_code">Pin Code</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="save">SAVE</string>
    <string name="done">DONE</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="account_number">Account Number</string>
    <string name="confirm_account_number">Confirm Account Number</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="bank_name">Bank Name</string>
    <string name="submit">SUBMIT</string>
    <string name="please_enter_account_number">Please enter account number</string>
    <string name="please_enter_confirm_account_number">Please enter confirm account number</string>
    <string name="and">And</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>