<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingPrefix">

    <RelativeLayout
        android:id="@+id/rl_add_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rl_cancel"
        android:background="@drawable/uoons_rounded_dialog_bg">

        <TextView
            android:id="@+id/tv_move_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/select_image"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/text_size18"
            android:visibility="gone" />


        <RelativeLayout
            android:id="@+id/takePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/documentTextView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:background="?android:attr/selectableItemBackground"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/take_photo"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size14" />


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/takePhoto"
            android:background="@color/grey" />

        <RelativeLayout
            android:id="@+id/chooseFromGallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line2"
            android:gravity="center"
            android:visibility="visible">

            <TextView
                android:id="@+id/tv_photo_library"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/choose_from_gallery"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size14" />


        </RelativeLayout>

    </RelativeLayout>

    <!--<View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        android:id="@+id/view"
        android:layout_above="@id/rl_cancel"
        android:background="@color/gray_bg"/>-->

    <RelativeLayout
        android:id="@+id/rl_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/uoons_rounded_corner_textbg">

            <TextView
                android:id="@+id/cancelTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="?android:attr/selectableItemBackground"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:padding="@dimen/_15sdp"
                android:text="@string/cancel"
                android:textColor="@color/primary_color"
                android:textSize="@dimen/text_size14" />


        </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>